fix : grids data

--- a/app/webComponents/dataBase/dataBase.html
+++ b/app/webComponents/dataBase/dataBase.html
@@ -30,7 +30,8 @@
             <i class="fa fa-angle-down put--away--btn" aria-hidden="true"></i>
         </div>
         <div class="filter--properties--box">
-            <div class="single--attribute--box">
+            <div class="clearfix">
+                <div class="single--attribute--box">
                 <span class="attribute--title">按数据形态</span>
                 <div class="attribute--value">
                     <ui-select multiple ng-model="vm.parameter.dataType" theme="bootstrap"  close-on-select="false"  title="Choose a color">
@@ -41,54 +42,54 @@
                     </ui-select>
                 </div>
             </div>
-            <div class="single--attribute--box">
-                <span class="attribute--title">按来源系统</span>
-                <div class="attribute--value">
-                    <ui-select multiple ng-model="vm.parameter.systemSource" theme="bootstrap"  close-on-select="false"  title="Choose a color">
-                        <ui-select-match placeholder="按来源系统">{{$item}}</ui-select-match>
-                        <ui-select-choices repeat="system in vm.systemSourceLists | filter:$select.search">
-                            {{system}}
-                        </ui-select-choices>
-                    </ui-select>
+                <div class="single--attribute--box">
+                    <span class="attribute--title">按来源系统</span>
+                    <div class="attribute--value">
+                        <ui-select multiple ng-model="vm.parameter.systemSource" theme="bootstrap"  close-on-select="false"  title="Choose a color">
+                            <ui-select-match placeholder="按来源系统">{{$item}}</ui-select-match>
+                            <ui-select-choices repeat="system in vm.systemSourceLists | filter:$select.search">
+                                {{system}}
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
                 </div>
-            </div>
-            <div class="single--attribute--box">
-                <span class="attribute--title">按单位</span>
-                <div class="attribute--value">
-                    <ui-select multiple ng-model="vm.parameter.unit" theme="bootstrap"   close-on-select="false"  title="Choose a color">
-                        <ui-select-match placeholder="按单位">{{$item}}</ui-select-match>
-                        <ui-select-choices repeat="unit in vm.unitList | filter:$select.search">
-                            {{unit}}
-                        </ui-select-choices>
-                    </ui-select>
+                <div class="single--attribute--box">
+                    <span class="attribute--title">按单位</span>
+                    <div class="attribute--value">
+                        <ui-select multiple ng-model="vm.parameter.unit" theme="bootstrap"   close-on-select="false"  title="Choose a color">
+                            <ui-select-match placeholder="按单位">{{$item}}</ui-select-match>
+                            <ui-select-choices repeat="unit in vm.unitList | filter:$select.search">
+                                {{unit}}
+                            </ui-select-choices>
+                        </ui-select>
+                    </div>
                 </div>
-            </div>
-            <div class="single--attribute--box time--frame">
-                <span class="attribute--title">时间范围</span>
-                <div  layout="row" class="attribute--value">
-                    <p class="input-group">
-                        <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.parameter.dateFrom" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                <div class="single--attribute--box time--frame">
+                    <span class="attribute--title">时间范围</span>
+                    <div  layout="row" class="attribute--value">
+                        <div class="input-group">
+                            <input type="text" class="form-control " uib-datepicker-popup ng-model="vm.parameter.dateFrom" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" ng-click="popup2.opened = true"><i class="glyphicon glyphicon-calendar"></i></button>
                           </span>
-                    </p>
-                </div>
-                <span class="time--frame__sign">-</span>
-                <div  layout="row" class="attribute--value">
-                    <p class="input-group">
-                        <input type="text" class="form-control" uib-datepicker-popup ng-model="vm.parameter.dateTo" is-open="popup3.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+                        </div>
+                    </div>
+                    <span class="time--frame__sign">-</span>
+                    <div  layout="row" class="attribute--value">
+                        <div class="input-group">
+                            <input type="text" class="form-control " uib-datepicker-popup ng-model="vm.parameter.dateTo" is-open="popup3.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" ng-click="popup3.opened = true"><i class="glyphicon glyphicon-calendar"></i></button>
                           </span>
-                    </p>
+                        </div>
+                    </div>
                 </div>
             </div>
+
             <div class="search--location--box">
-                <div flex-gt-sm="20">
-                    <input type="checkbox" ng-click="vm.parameter.dataError = !vm.parameter.dataError" ng-checked="vm.parameter.dataError">
-                    <span style="padding: 5px 0px">只显示有异常的批次</span>
-                    <md-button class="md-raised pull-right green--btn" ng-click="vm.search()">搜索</md-button>
-                </div>
+                <input type="checkbox" ng-click="vm.parameter.dataError = !vm.parameter.dataError" ng-checked="vm.parameter.dataError">
+                <span style="padding: 5px 0px">只显示有异常的批次</span>
+                <md-button class="md-raised pull-right green--btn" ng-click="vm.search()">搜索</md-button>
             </div>
         </div>
     </div>
