fix: angular-tree-d3.directive & connect api

--- a/app/modules/dataBase/dataBase.html
+++ b/app/modules/dataBase/dataBase.html
@@ -88,7 +88,7 @@
             <div class="search--location--box">
                 <input type="checkbox" ng-click="vm.parameter.dataError = !vm.parameter.dataError" ng-checked="vm.parameter.dataError">
                 <span style="padding: 5px 0px">只显示有异常的批次</span>
-                <md-button class="md-raised pull-right green--btn" ng-click="vm.search()">搜索</md-button>
+                <md-button class="pull-right green--btn" ng-click="vm.search()">搜索</md-button>
             </div>
         </div>
     </div>
