--- a/app/modules/dataError/dataError.html
+++ b/app/modules/dataError/dataError.html
@@ -87,7 +87,7 @@
             <div class="search--location--box">
                 <input type="checkbox" ng-click="vm.parameter.dataError = !vm.parameter.dataError" ng-checked="vm.parameter.dataError">
                 <span style="padding: 5px 0px">只显示有异常的批次</span>
-                <md-button class="md-raised pull-right green--btn" ng-click="vm.search()">搜索</md-button>
+                <md-button class="pull-right green--btn" ng-click="vm.search()">搜索</md-button>
             </div>
         </div>
     </div>
@@ -97,10 +97,10 @@
                 <span class="title">批次信息</span>
                 <span class="data--count">共有132个批次信息</span>
             </div>
-            <md-button class="md-raised pull-right green--btn" ng-click="vm.search()">
+            <md-button class="pull-right green--btn" ng-click="vm.search()">
                 <span class="glyphicon glyphicon-new-window"></span>
                 <span>导出报表</span></md-button>
-            <md-button  class="md-raised pull-right red--btn" ng-click="vm.search()">
+            <md-button  class=" pull-right red--btn" ng-click="vm.search()">
                 <span class="glyphicon glyphicon-refresh"></span>
                 <span>强制转换</span>
                 </md-button>
