--- a/app/modules/projectManage/projectEdit/basicData/basicData.html
+++ b/app/modules/projectManage/projectEdit/basicData/basicData.html
@@ -13,7 +13,7 @@
     </md-toolbar>
     <div aria-label="Mango" class="edit--project--manage--wrapper">
         <md-progress-linear ng-show="vm.loading" md-mode="indeterminate"></md-progress-linear>
-        <div class="edit--project--manage--wrapper">
+        <div class="">
             <div class="md-dialog-content base--info--content">
                 <form ng-cloak
                       name="editProject"
