--- a/app/modules/projectManage/projectManage.html
+++ b/app/modules/projectManage/projectManage.html
@@ -6,7 +6,7 @@
                     <h3>项目管理</h3>
                     <p>建立项目针对每个归档系统建立归档策略和业务模版</p>
                 </div>
-                <md-button ng-click="vm.newProject($event)" class="md-no-ink md-warn md-raised red--btn new--project--btn">
+                <md-button ng-click="vm.newProject($event)" class="red--btn new--project--btn">
                     <span class="glyphicon glyphicon-plus"></span>
                     <span translate="PROJECT_MANAGE_NEW_PROJECT">新建项目</span>
                 </md-button>
