--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,8 @@
     <!--Gulp need-->
     <!-- build:css(app) css/main.css -->
     <link rel="stylesheet" href="css/main.css" />
+
+    <link rel="stylesheet" href="common/directive/d3treeForAngular/css/d3treeForAngular.css" />
     <!--<link rel="stylesheet" href="common/hsUiGridTemplates/css/uiGridTemplates.css" />-->
     <!--<link rel="stylesheet" href="common/hsTemplates/css/hsTemplates.css" />-->
     <!--<link rel="stylesheet" href="common/directive/collapsibleTree/collapsibleTree.css" />-->
@@ -78,6 +80,7 @@
     <script src="common/factory/MockRestangular.factory.js"></script>
 
     <script src="common/directive/collapsibleTree/angular-d3-tree.directive.js"></script>
+    <script src="common/directive/d3treeForAngular/d3treeForAngular.directive.js"></script>
     <script src="common/directive/systemSideBar/systemSideBar.directive.js"></script>
     <script src="common/directive/messageVerify/messageVerify.directive.js"></script>
     <script src="common/translate/translate.service.js"></script>
