--- a/app/modules/userManage/userManage.html
+++ b/app/modules/userManage/userManage.html
@@ -2,10 +2,13 @@
     <system-side-bar></system-side-bar>
 </div>
 
-<div class="anim-slide-below-fade data--base--sidenav--right--box">
 
-    <div>
-        userManage
+<div class="anim-slide-right data--base--sidenav--right--box" style="position:relative">
+    <div class="tip-show-animate md-whiteframe-12dp" ng-class="{true: 'showTreeTool', false: 'hiddenTreeTool'}[tipTool.isShow == 1]"  ng-style="{'top':tipTool.x,'left':tipTool.y,'position':'absolute','opacity':tipTool.isShow}">
+        名字 :    {{tipTool.name}}
+        id : {{tipTool.id}}
     </div>
+    <tree-for-angular   id="customModule" nodes = 'nodes' width = '200' height = '200' radius = '490'>
 
+    </tree-for-angular>
 </div>
